// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon/> renders correctly if prop name and border set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq bSqQPn"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and flip set horizontal 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq ccpZVT"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and flip set vertical 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq fzeBvs"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and pulse set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq goTdrN"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 0 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gTVhis"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 90 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gzSfsE"
  color=""
  onClick={[Function]}
  rotate={90}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 180 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq jUHIyh"
  color=""
  onClick={[Function]}
  rotate={180}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and rotate set 270 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq exktAO"
  color=""
  onClick={[Function]}
  rotate={270}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set inherit 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq jIowIK"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set large 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq hHmaHZ"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set normal 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gTVhis"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and size set small 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq ffLygF"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and spin set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq cSzGrt"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop name and tabIndex set 1 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gTVhis"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
  tabIndex={1}
/>
`;

exports[`<Icon/> renders correctly if prop name and tabIndex set 100 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gTVhis"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
  tabIndex={100}
/>
`;

exports[`<Icon/> renders correctly if prop name set 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gTVhis"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders correctly if prop type set library and tabIndex set 1 1`] = `null`;

exports[`<Icon/> renders correctly with default props 1`] = `
<span
  className="fa fa-github IconFontAwesomeStyled__IconFontAwesomeStyled-cpbEq gTVhis"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
/>
`;

exports[`<Icon/> renders with "library" as type 1`] = `
<div
  className="IconLibraryStyled__IconLibraryStyled-gcAxIp ejLgQW"
  color=""
  onClick={[Function]}
  rotate={0}
  size="normal"
  src=""
>
  <div
    className="IconHolderStyled__IconHolderStyled-bOzJUd jnpiax"
    color=""
    rotate={0}
    size="normal"
    src="foo://bar"
  />
</div>
`;
